fix (wrong colors on: save button, go back kids and button link)

--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -34,3 +34,7 @@
 .button.disabled {
 	opacity: 0.5;
 }
+
+.button.save_button {
+	color: var(--base-font-color)
+}
