--- a/src/views/kids_space/game_menu/styles.css
+++ b/src/views/kids_space/game_menu/styles.css
@@ -5,3 +5,9 @@
 	font-size: var(--very-large-font);
 	overflow: auto;
 }
+
+.game_menu_arrow_back .dino_icon_button__button svg {
+	width: 3rem;
+	height: 3rem;
+	fill: var(--light-color);
+}
